[package]
name = "dashathon-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
octocrab = "0.42.1"
opensearch = "2.3.0"
ratelimit = "0.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
